split request and response

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
             "email": "frostwong@gmail.com"
         }
     ],
-    "require": {},
+    "require": {
+        "psr/http-message": "^1.0"
+    },
     "autoload": {
         "psr-4": {
             "Ygritte\\": "src/Ygritte"
